# oraker

./: .pre-commit-config.yaml  CMakeLists.txt  main.cpp
.github/workflows/: cmake-single-platform.yml
notebooks/: train-yolov8-object-detection-on-custom-dataset.ipynb
